# Quddy

./: .gitattributes  LICENSE  README.md
Package/: pyproject.toml
Package/src/Quddy/: Programs.py  __init__.py  fitter.py  helper.py
Scripts/: .gitattributes  connect_instruments.py
Scripts/CW/: C1_1_Single_tone_powerdep.py  C1_2_Single_tone_gatedep.py  C1_3_Single_tone_tempdep.py  C1_Single_tone.py  C2_1_Two_tone_powerdep.py  C2_2_Two_tone_gatedep.py  C2_Two_tone.py  config.json  sweeper_CW_single_tone.py
Scripts/RFSOC/: R0_TOF.py  R1_1_Single_tone_powerdep.py  R1_2_Single_tone_gatedep.py  R1_Single_tone.py  R2_1_Two_tone_powerdep.py  R2_2_Two_tone_gatedep.py  R2_Two_tone.py  R3_Single_shot.py  R4_1_2dRabi.py  R4_2_Chevron.py  R4_Amplitude_Rabi.py  R4_Length_Rabi.py  R5_T1.py  R5_T2Echo.py  R5_T2Ramsey.py  config.json
Scripts/z_Resources/: Qi_powerdep.ipynb  Resonator punchout.py  gatedep.py  h5_tutorial.py
Scripts/z_Resources/plotter_v1/: 2D_live_plotter.ipy
Scripts/z_Resources/plotter_v2/: README.md  plotter_v2.py  register_plotter_h5.bat
Scripts/z_old_stuff/: 1D_live_plotter.ipy  plotter.py
