[project]
name = "Quddy"
version = "0.2.1"
authors = [
  	{name="Shreyas Asodekar", email="shreyasodekar@gmail.com" },
]
description = "A buddy for your nanowire transmon qubit measurements"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
    	"Operating System :: OS Independent"
]
keywords = ["RFSOC", "Qubit","measurement","transmon", "Qick"]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    	"numpy==1.26.4",
	"scipy==1.10.0",
	"matplotlib==3.5.1",
	"h5py==3.11.0",
 	"qcodes==0.45.0",
  	"qcodes_contrib_drivers",
  	"lmfit>=0.9.3",
 	"pyro4==4.82",
	"qick==0.2.262",
	"simplejson==3.19.2",
	"tqdm==4.66.4",
	"psutil==6.0.0",
 	"ipywidgets==8.1.6",
  	"jupyter==1.1.1",
   	"spyder==5.5.5"
]

[project.urls]
Homepage = "https://github.com/shreyasodekar/Quddy"
Issues = "https://github.com/shreyasodekar/Quddy/issues"
